--- a/style.css
+++ b/style.css
@@ -372,6 +372,20 @@ section h2 {
   font-size: 16px;
 }
 
+.menu-tugas {
+    display: flex;
+    gap: 20px;
+}
+
+.cta-button {
+    background-color: #e74c3c;
+    color: white;
+    font-weight: bold;
+    padding: 8px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
 .contact-buttons {
   margin-top: 15px;
 }
@@ -428,3 +442,4 @@ footer {
     height: 140px;
   }
 }
+
